# cv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.yaml  cv.md  docker-compose.debug.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  dependabot.yml  deploy.yml  docker.yml  merge.yml  static.yml
helm/: values.yaml
helm/templates/: deployment.yaml
md/: cv.md  index.md
md/cloud/: abitur.by.md  avtooptika.by.md  emditey.xyz.md  salonoff.by.md
md/osm/: index.html
src/: __init__.py  __main__.py  main.py
src/config/: configs.py  settings.py
src/md/: cv.md  index.md
src/md/cloud/: abitur.by.md  avtooptika.by.md  emditey.xyz.md  index.md  salonoff.by.md  script.js
src/md/hb/: babka.html  babka.md  current.md  index.html  old.html  old.md  script.js  style.css
src/md/osm/: index.md  script.js
src/md/osm/map/: index.html  index.js
src/md/osm/map_old/: index.html  index.js  index_new.js  index_new.js.save  index_new_1.js  map.html
src/md/wiki/: bind.md  check_dns_version_with_chaos_net.md  dns.md  exim._two_doamins_with_dkim.md  ffmpeg.md  git.md  map.md  multi_.example.com.md  percona.md  redmine.md  usiung_chaos_net.md  wiki-pass.md
src/routes/: __init__.py  cloud.py  cv.py  debugs.py  distances.py
src/utils/: __init__.py  cv_generator.py  gendoc.py  mdhelp.py
static/: script.js
tests/: test_app.py
